@@ -2,9 +2,11 @@ AUX xmonad.desktop 148 RMD160 90d2f6277535b1a6b2ad0270d5b2361e9c5ffe78 SHA1 b9f2
 DIST xmonad-0.5.tar.gz 48853 RMD160 8e39d8a2ad8e8d16006bdcd1f645d6a31be721f8 SHA1 acea831a6da485ad996c8bda7a67f1acbd70d3fa SHA256 cfcc4501b000fa740ed35a5be87dc01216e036219551630dcf71d9c3cf57e4c4
 DIST xmonad-0.6.tar.gz 49635 RMD160 53513fceedd7979ea2dbfa882e737a0ddd9bbe80 SHA1 e2221b80e03cd0997cb841e85ac893d6daf6dfb0 SHA256 e107c5dbc659b2342e0e736d9baee0ee88a1404fa5161481b1924f23d3367c21
 DIST xmonad-0.7.tar.gz 52740 RMD160 790f8ce7a3975fc385a267706a3c19fdec1f3c32 SHA1 cf3fb7662c92cadb9ea7bfdc916bbe5cc587ac86 SHA256 d5ee338eb6d0680082e20eaafa0b23b32358fffe69e2ec4ad7bdf6e03c751d67
+DIST xmonad-0.8.tar.gz 52896 RMD160 50d203af66e80de469a12f6261e40451f00de227 SHA1 26eb5e80ba83da43cec963435daec6b925e3b1a7 SHA256 982a3189e6815dc7e1a9dfc5200a1d746490abe1a8a953f093ea9597a0d40681
 EBUILD xmonad-0.5-r1.ebuild 1892 RMD160 780e2eae863198038f5f4a1c97800a9bdcffdcbc SHA1 d51f35c053e33ea2273690d8b48bcef38e1624e7 SHA256 35d26ae34b5e263c5fae9c412fcaf7f6201155f29ccac654459f7d790080ec03
 EBUILD xmonad-0.5.ebuild 1019 RMD160 85cce6c109a936760b9a78618a9d90661463bc47 SHA1 5836a9b9a47921d6f7b030f0a9832a1265c994ad SHA256 e359a81789bf7cf76b24e515c1571793c5e3c5c07990a6b67727216550994849
 EBUILD xmonad-0.6.ebuild 1844 RMD160 9ec41f53e4f9004b67cead579907648e6503d050 SHA1 965e805bd807144cf596d39f831677976f208be4 SHA256 4aab94d950a75f0f322d9a44bc79d125bccded0c17083f570ff9dae7edd77a3b
 EBUILD xmonad-0.7.ebuild 1851 RMD160 8e9f6e9318b741b14eead6cac524b9f8b096b2a0 SHA1 8b2d2921d725311f2f980836cd30b90e169806d4 SHA256 6243c60ed352fc7f5c1b5c36f65695d89c7e0a384b9d6264ac49900492d3caf6
-MISC ChangeLog 1235 RMD160 0be04307c73cf04bfdd2d6d28ee4489220b03c08 SHA1 5a2e71ff82507d9e86042f1cc0a46e4c124cfb37 SHA256 6644a25ed0dd054adb1d5d51a8b3991509bfd9604e71193f5434cc44aea936f0
+EBUILD xmonad-0.8.ebuild 1718 RMD160 0ff5ad3d2677c41d9c70ef9e494a662c1899d20b SHA1 39cdbbbc0209b5b89f9059594e06580a381d00b0 SHA256 49f45325b30d347de8f7ee21ae423249fc67853cbb0912e69434121e5d0b5d4b
+MISC ChangeLog 1367 RMD160 f3fe9e1952ef45f5609ebe0d8d8fe6ef32417000 SHA1 f3bb74802ba59e32e8223b85003c4f1b70563da3 SHA256 9bca7fb9956552180994c3e5150248deb14fc00405cd340017c55081923c404c
 MISC metadata.xml 223 RMD160 7783e6057effb8b8f0b79cffe8b557b32c633839 SHA1 7b962c77f2e38479a9d1621ec8d307ca9f761753 SHA256 1d00c8be162a6cb87b3de440b3e63e10b39c12d56e8fbfe592e75aed872b2508
